--- a/MoneyStack/.classpath
+++ b/MoneyStack/.classpath
@@ -5,7 +5,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="srcSubmission"/>
+	<classpathentry kind="src" path="srcAutograder"/>
 	<classpathentry kind="lib" path="libs/byte-buddy-1.10.20.jar"/>
 	<classpathentry kind="lib" path="libs/byte-buddy-agent-1.10.20.jar"/>
 	<classpathentry kind="lib" path="libs/hamcrest-all-1.3.jar"/>
